--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -69,7 +69,7 @@ jobs:
 
   build_c7_slim_externals:
     name: build_c7
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest 
     needs: build_sl7_slim_externals
     permissions:
       packages: write
@@ -115,7 +115,7 @@ jobs:
 
   build_c8_slim_externals:
     name: build_c8
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest 
     needs: build_sl7_slim_externals
     permissions:
       packages: write
@@ -161,7 +161,7 @@ jobs:
 
   build_alma9_slim_externals:
     name: build_alma9
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest 
     needs: build_sl7_slim_externals
     permissions:
       packages: write
